--- a/oscar/static/oscar/scss/dashboard/navbar.scss
+++ b/oscar/static/oscar/scss/dashboard/navbar.scss
@@ -33,7 +33,7 @@
     @include gradient-y($gray-800, $gray-900);
 
     .navbar-brand {
-      background: url("../img/ui/dashboard/logo_oscar.png") no-repeat scroll 0 0 transparent;
+      background: url("https://www.medose.in/assets/img/svg/home-page/Artwork%2024.svg") no-repeat scroll 0 0 transparent;
       text-indent: -9999px;
       display: block;
       width: 60px;
